# 2026_SceneGen

./: .gitignore  README.md  pyproject.toml
config/: README.md  bistro.yaml  default.yaml  dense.yaml  front3d.yaml  medium.yaml  procedural_front3d.yaml  procedural_front3d_vision.yaml  sparse.yaml  template.yaml
config/tasks/: front3d_full_simulation.yaml  procedural_front3d_full_simulation.yaml  procedural_front3d_vision_full_simulation.yaml
data/assets/: manifest.json
data/assets/CashRegister_01A_Mesh/: CashRegister_01A_Mesh.json
data/assets/Coasters_paris_coasters_01_a/: Coasters_paris_coasters_01_a.json
data/assets/CookieJar/: CookieJar.json
data/catalogs/: bistro.v1.json
data/scene/: label.json
docs/: agent_handoff.md  data_onboarding.md  derived_map_generation_spec.md  performance_optimization_after_5015e71.md  procedural_vision_worker_sweep_20260619.md  procedural_worker_sweep_20260617.md  todo.md  vision_multitask_model_design.md  worker_sweep_20260616.md
docs/todo/: README.md  feature.md  history.md  performance.md  structure.md
scripts/: analyze_scene_dataset.py  build_vision_dataset.py  generate_derived_maps.py  merge_vision_datasets.py  visualize_derived_maps.py
src/scenegen/: __init__.py  assets.py  batch.py  cli.py  config.py  exporters.py  floorplan.py  front3d.py  geometry.py  labels.py  maps.py  models.py  modes.py  paths.py  placement.py  procedural.py  quality.py  runlog.py  sources.py  validation.py
tests/: test_derived_maps_dataset.py  test_front3d_phase1.py  test_scenegen.py
tools/: prepare_front3d_phase1.py
(+80 files in other folders)
