[project]
name = "scenegen"
version = "3.20.0"
description = "Lightweight procedural scene generation for Sionna-compatible XML/OBJ outputs."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=2.0",
  "pillow>=10",
  "pyyaml>=6.0",
  "sionna>=2.0.1,<3",
  "trimesh>=4.0",
]

[project.scripts]
scenegen = "scenegen.cli:main"
scenegen-batch = "scenegen.batch:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scenegen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["3d_scripts", "data/3D-Front"]
